Atualizando dados fictícios...

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,6 +11,9 @@
       <a mat-list-item routerLink="pedidos">
         <mat-icon>shopping_cart</mat-icon> Pedidos
       </a>
+      <a mat-list-item routerLink="">
+        <mat-icon>report</mat-icon> Relatórios
+      </a>
       <a mat-list-item routerLink="/login">
         <button mat-button (click)="logout()">Sair</button>
       </a>
