--- a/src/app/pages/clientes/cliente-form/cliente-form.component.html
+++ b/src/app/pages/clientes/cliente-form/cliente-form.component.html
@@ -18,7 +18,7 @@
 
     <mat-form-field class="full-width">
       <mat-label>Telefone</mat-label>
-      <input matInput type="telefone" formControlName="telefone">
+      <input matInput formControlName="telefone" (input)="formatarTelefone()" maxlength="15">
     </mat-form-field>
   </form>
 </mat-dialog-content>
