--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,8 +11,14 @@
       <a mat-list-item routerLink="pedidos">
         <mat-icon>shopping_cart</mat-icon> Pedidos
       </a>
-      <a mat-list-item routerLink="">
+      <a mat-list-item routerLink="relatorios">
         <mat-icon>report</mat-icon> Relatórios
+      </a>
+      <a mat-list-item routerLink="funcionarios">
+        <mat-icon>group</mat-icon> Funcionários
+      </a>
+      <a mat-list-item routerLink="meios-pagamento">
+        <mat-icon>payment</mat-icon> Meios de Pagamento
       </a>
       <a mat-list-item routerLink="/login">
         <button mat-button (click)="logout()">Sair</button>
