--- a/src/app/pages/pedidos/pedido-form/pedido-form.component.html
+++ b/src/app/pages/pedidos/pedido-form/pedido-form.component.html
@@ -1,20 +1,63 @@
-<h2 mat-dialog-title>{{ data ? 'Editar Pedido' : 'Novo Pedido' }}</h2>
+<mat-card class="pedido-card">
+  <h2>Novo Pedido</h2>
 
-<mat-dialog-content>
-  <form [formGroup]="pedidoForm">
+  <form [formGroup]="pedidoForm" (ngSubmit)="salvar()">
+    
     <mat-form-field class="full-width">
       <mat-label>Cliente</mat-label>
-      <input matInput formControlName="cliente">
+      <mat-select formControlName="cliente">
+        <mat-option *ngFor="let cliente of clientes" [value]="cliente.id">
+          {{ cliente.nome }}
+        </mat-option>
+      </mat-select>
     </mat-form-field>
 
-    <mat-form-field class="full-width">
-      <mat-label>Total</mat-label>
-      <input matInput type="number" formControlName="total">
-    </mat-form-field>
+      <div class="linha-separada">
+      <div formArrayName="produtos">
+        <div *ngFor="let produtoCtrl of produtos.controls; let i = index;" [formGroupName]="i" class="produto-item">
+          <mat-form-field class="full-width">
+            <mat-label>Produto</mat-label>
+            <mat-select formControlName="produto">
+              <mat-option *ngFor="let produto of produtosDisponiveis" [value]="produto.id">
+                {{ produto.nome }} - R$ {{ produto.preco }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field class="quantidade-field">
+            <mat-label>Quantidade</mat-label>
+            <input matInput type="number" formControlName="quantidade" (change)="calcularTotal()">
+          </mat-form-field>
+
+          <button mat-icon-button color="warn" (click)="removerProduto(i)" *ngIf="produtos.length > 1">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </div>
+      </div> 
+
+      <button mat-raised-button color="primary" (click)="adicionarProduto()" type="button">
+        <mat-icon>add</mat-icon> Adicionar Produto
+      </button>
+    </div>
+
+    <div class="linha-separada">
+      <mat-form-field class="full-width">
+        <mat-label>Meio de Pagamento</mat-label>
+        <mat-select formControlName="meioPagamento"> 
+          <mat-option *ngFor="let meioPagamento of meiosPagamentoDisponiveis" [value]="meioPagamento.id">
+            {{ meioPagamento.nome }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+    <mat-card class="total-card">
+      <h3>Total: R$ {{ total | number: '1.2-2' }}</h3>
+    </mat-card>
+
+    <button mat-raised-button color="accent" type="submit" [disabled]="pedidoForm.invalid">
+      Finalizar Pedido
+    </button>
+
   </form>
-</mat-dialog-content>
-
-<mat-dialog-actions align="end">
-  <button mat-button (click)="fechar()">Cancelar</button>
-  <button mat-raised-button color="primary" (click)="salvar()" [disabled]="pedidoForm.invalid">Salvar</button>
-</mat-dialog-actions>
+</mat-card>
