--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -25,6 +25,8 @@
           Entrar
         </button>
 
+        <button mat-icon-button color="accent" (click)="abrirImpressao(pedido)">
+
         <mat-error *ngIf="erroLogin" class="erro-mensagem">
           {{ erroLogin }}
         </mat-error>
