--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -26,6 +26,8 @@
         </button>
 
         <button mat-icon-button color="accent" (click)="abrirImpressao(pedido)">
+          Imprimir
+        </button>
 
         <mat-error *ngIf="erroLogin" class="erro-mensagem">
           {{ erroLogin }}
