--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -25,7 +25,7 @@
           Entrar
         </button>
 
-        <button mat-icon-button color="accent" (click)="abrirImpressao()">
+        <button mat-raised-button color="accent" (click)="abrirImpressao()">
           Imprimir
         </button>
 
