--- a/src/app/pages/clientes/cliente-form/cliente-form.component.html
+++ b/src/app/pages/clientes/cliente-form/cliente-form.component.html
@@ -7,7 +7,7 @@
     </mat-form-field>
 
     <mat-form-field class="full-width">
-      <mat-label>CPF/CNPJ</mat-label>
+      <mat-label>CPF/CNPJ.</mat-label>
       <input matInput formControlName="cpfcnpj" (input)="formatarCPFCNPJ()" maxlength="18">
     </mat-form-field>
 
