--- a/src/app/pages/funcionarios/funcionarios.component.html
+++ b/src/app/pages/funcionarios/funcionarios.component.html
@@ -7,25 +7,25 @@
   
     <button mat-raised-button color="primary" (click)="abrirFormulario()">Novo Funcionário</button>
   
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
         <td mat-cell *matCellDef="let funcionario">{{ funcionario.id }}</td>
       </ng-container>
   
       <ng-container matColumnDef="nome">
-        <th mat-header-cell *matHeaderCellDef>Nome</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
         <td mat-cell *matCellDef="let funcionario">{{ funcionario.nome }}</td>
       </ng-container>
   
       <ng-container matColumnDef="cargo">
-        <th mat-header-cell *matHeaderCellDef>Cargo</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Cargo</th>
         <td mat-cell *matCellDef="let funcionario"> {{ funcionario.cargo }} </td>
       </ng-container>
   
       <ng-container matColumnDef="salario">
-        <th mat-header-cell *matHeaderCellDef>Salário</th>
-        <td mat-cell *matCellDef="let funcionario">{{ funcionario.salario }}</td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Salário</th>
+        <td mat-cell *matCellDef="let funcionario">{{ funcionario.salario | currency : 'BRL' }}</td>
       </ng-container>
   
       <ng-container matColumnDef="acoes">
