--- a/src/app/pages/pedidos/pedido-form/pedido-form.component.css
+++ b/src/app/pages/pedidos/pedido-form/pedido-form.component.css
@@ -17,7 +17,6 @@ button {
   margin-right: 10px;
 }
 
-
 .full-width {
     width: 100%;
     max-width: 400px;
@@ -25,9 +24,29 @@ button {
     margin: auto;
     text-align: center;
   }
+
+  .quantidade-field {
+    width: 100%;
+    max-width: 100px;
+    padding: 10px;
+    margin: auto;
+    text-align: center;
+  } 
     
   .preco-field {
-    max-width: 100px;
+    width: 100%;
+    max-width: 150px;
+    padding: 10px;
+    margin: auto;
+    text-align: center;
+  } 
+
+  .cpfnanota-field {
+    width: 100%;
+    max-width: 200px;
+    padding: 10px;
+    margin: auto;
+    text-align: center;
   } 
   
   .total-card {
