--- a/src/app/pages/pedidos/pedido-form/pedido-form.component.html
+++ b/src/app/pages/pedidos/pedido-form/pedido-form.component.html
@@ -5,11 +5,16 @@
     
     <mat-form-field class="full-width">
       <mat-label>Cliente</mat-label>
-      <mat-select formControlName="cliente">
-        <mat-option *ngFor="let cliente of clientes" [value]="cliente.id">
+      <mat-select formControlName="cliente" (selectionChange)="carregarCPF($event.value)">
+        <mat-option *ngFor="let cliente of clientes" [value]="cliente.id" >
           {{ cliente.nome }}
         </mat-option>
       </mat-select>
+    </mat-form-field>
+
+    <mat-form-field class="cpfnanota-field">
+      <mat-label>CPF</mat-label>
+      <input matInput formControlName="cpfnanota" (input)="formatarCPFCNPJ()" maxlength="18">
     </mat-form-field>
 
       <div class="linha-separada">
@@ -29,6 +34,11 @@
             <input matInput type="number" formControlName="quantidade" (change)="calcularTotal()">
           </mat-form-field>
 
+          <mat-form-field class="preco-field">
+            <mat-label>Preço Unitário</mat-label>
+            <input matInput type="number" formControlName="preco" (input)="calcularTotal()">
+          </mat-form-field>
+
           <button mat-icon-button color="warn" (click)="removerProduto(i)" *ngIf="produtos.length > 1">
             <mat-icon>delete</mat-icon>
           </button>
@@ -43,16 +53,25 @@
     <div class="linha-separada">
       <mat-form-field class="full-width">
         <mat-label>Meio de Pagamento</mat-label>
-        <mat-select formControlName="meioPagamento"> 
+        <mat-select formControlName="meioPagamento" (selectionChange)="mostrarEntrada($event.value)"> 
           <mat-option *ngFor="let meioPagamento of meiosPagamentoDisponiveis" [value]="meioPagamento.id">
             {{ meioPagamento.nome }}
           </mat-option>
         </mat-select>
       </mat-form-field>
+
+      <mat-form-field class="preco-field" *ngIf="mostrarValorRecebido">
+        <mat-label>Valor Recebido</mat-label>
+        <input matInput type="number" formControlName="valorRecebido" (input)="calcularTroco()" value="0">
+      </mat-form-field>
     </div>
 
     <mat-card class="total-card">
       <h3>Total: R$ {{ total | number: '1.2-2' }}</h3>
+    </mat-card>
+
+    <mat-card class="total-card" *ngIf="mostrarValorRecebido">
+      <h3>Troco: R$ {{ troco | number: '1.2-2' }}</h3>
     </mat-card>
 
     <button mat-raised-button color="accent" type="submit" [disabled]="pedidoForm.invalid">
