--- a/src/app/pages/produtos/produtos.component.html
+++ b/src/app/pages/produtos/produtos.component.html
@@ -8,19 +8,19 @@
 
   <button mat-raised-button color="primary" (click)="abrirFormulario()">Novo Produto</button>
 
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef>ID</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
       <td mat-cell *matCellDef="let produto">{{ produto.id }}</td>
     </ng-container>
 
     <ng-container matColumnDef="nome">
-      <th mat-header-cell *matHeaderCellDef>Nome</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
       <td mat-cell *matCellDef="let produto">{{ produto.nome }}</td>
     </ng-container>
 
     <ng-container matColumnDef="preco">
-      <th mat-header-cell *matHeaderCellDef>Preço</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Preço</th>
       <td mat-cell *matCellDef="let produto">R$ {{ produto.preco | number:'1.2-2' }}</td>
     </ng-container>
 
