--- a/src/app/pages/pedidos/pedido-form/pedido-form.component.css
+++ b/src/app/pages/pedidos/pedido-form/pedido-form.component.css
@@ -47,6 +47,14 @@ button {
     padding: 10px;
     margin: auto;
     text-align: center;
+  }
+
+  .isrevendedor-field {
+    width: 100%;
+    max-width: 200px;
+    padding: 10px;
+    margin: auto;
+    text-align: center;
   } 
   
   .total-card {
