--- a/src/app/pages/produtos/produto-form/produto-form.component.html
+++ b/src/app/pages/produtos/produto-form/produto-form.component.html
@@ -11,6 +11,11 @@
       <mat-label>Preço</mat-label>
       <input matInput type="number" formControlName="preco">
     </mat-form-field>
+
+    <mat-form-field class="full-width">
+      <mat-label>Preço Revendedor</mat-label>
+      <input matInput type="number" formControlName="precorevendedor">
+    </mat-form-field>
   </form>
 </mat-dialog-content>
 
