--- a/src/app/pages/clientes/clientes.component.html
+++ b/src/app/pages/clientes/clientes.component.html
@@ -35,7 +35,7 @@
     </ng-container>
 
     <ng-container matColumnDef="isrevendedor">
-      <th mat-header-cell *matHeaderCellDef>É Revendedor?</th>
+      <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
       <td mat-cell *matCellDef="let cliente">
           <!-- {{ cliente.isrevendedor ? 'Sim' : 'Não' }} -->
         <mat-icon *ngIf="cliente.isrevendedor" color="accent">star</mat-icon>
@@ -48,8 +48,9 @@
       <td mat-cell *matCellDef="let cliente">
         <button mat-button color="accent" (click)="abrirFormulario(cliente)">Editar</button>
         <button mat-button color="warn" (click)="excluir(cliente.id)">Excluir</button>
-        <button mat-button color="warn" (click)="novoPedido(cliente.id, cliente.cpfcnpj, cliente.isrevendedor);"><mat-icon>shopping_cart</mat-icon>Novo Pedido</button>
+        <button mat-button color="warn" (click)="novoPedido(cliente.id, cliente.cpfcnpj, cliente.isrevendedor, cliente.saldo);"><mat-icon>shopping_cart</mat-icon></button>
         <button mat-button color="warn" (click)="consultaHistorico(cliente.id, cliente.nome);">À Prazo</button>
+        <button mat-button color="warn" (click)="mostrarBaixa(cliente);"><mat-icon>paid</mat-icon></button>
       </td>
     </ng-container>
 
