--- a/src/app/pages/funcionarios/funcionarios.component.html
+++ b/src/app/pages/funcionarios/funcionarios.component.html
@@ -25,7 +25,7 @@
   
       <ng-container matColumnDef="salario">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Salário</th>
-        <td mat-cell *matCellDef="let funcionario">{{ funcionario.salario | currency : 'BRL' }}</td>
+        <td mat-cell *matCellDef="let funcionario">{{ funcionario.salario | currency:'BRL':'symbol':'1.2-2':'pt-BR' }}</td>
       </ng-container>
   
       <ng-container matColumnDef="acoes">
