--- a/src/app/pages/pedidos/pedido-cliente/pedido-cliente.component.html
+++ b/src/app/pages/pedidos/pedido-cliente/pedido-cliente.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <h2>Pedidos do Cliente</h2>
+    <h2>Pedidos À Prazo do Cliente</h2>
   
     <mat-form-field class="full-width">
       <mat-label>Pesquisar</mat-label>
@@ -34,17 +34,17 @@
   
       <ng-container matColumnDef="total">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
-        <td mat-cell *matCellDef="let pedido">{{ pedido.total | currency : 'BRL' }}</td>
+        <td mat-cell *matCellDef="let pedido">{{ pedido.total | currency:'BRL':'symbol':'1.2-2':'pt-BR' }}</td>
       </ng-container>
   
-      <ng-container matColumnDef="detalhes">
+      <!-- <ng-container matColumnDef="detalhes">
         <th mat-header-cell *matHeaderCellDef>Baixa</th>
         <td mat-cell *matCellDef="let pedido">
           <button mat-icon-button color="accent" (click)="mostrarBaixa(pedido)">
             <mat-icon>paid</mat-icon>
           </button>
         </td>
-      </ng-container>
+      </ng-container> -->
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
