--- a/src/app/pages/pedidos/pedido-detalhe/pedido-detalhe.component.html
+++ b/src/app/pages/pedidos/pedido-detalhe/pedido-detalhe.component.html
@@ -51,5 +51,5 @@
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
-  <button mat-button class="no-print" (click)="salvar()">Salvar</button>
+  <!-- <button mat-button class="no-print" (click)="salvar()">Salvar</button> -->
 </mat-dialog-actions>
