--- a/src/app/pages/pedidos/pedidos.component.html
+++ b/src/app/pages/pedidos/pedidos.component.html
@@ -36,7 +36,7 @@
 
     <ng-container matColumnDef="total">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
-      <td mat-cell *matCellDef="let pedido">{{ pedido.total | currency : 'BRL' }}</td>
+      <td mat-cell *matCellDef="let pedido">{{ pedido.total | currency:'BRL':'symbol':'1.2-2':'pt-BR' }}</td>
     </ng-container>
 
     <ng-container matColumnDef="detalhes">
