--- a/src/app/pages/clientes/cliente-baixa/cliente-baixa.component.html
+++ b/src/app/pages/clientes/cliente-baixa/cliente-baixa.component.html
@@ -5,7 +5,7 @@
     <p><strong>Nome:</strong> {{ data.nome }}</p>
     <p><strong>CPF:</strong> {{ data.cpfcnpj }}</p>
     <p><strong>Telefone:</strong> {{ data.telefone }}</p>
-    <p><strong>E-mail:</strong> {{ data.email }}</p>
+    <p><strong>Endereço:</strong> {{ data.email }}</p>
 
     </div>
     <form [formGroup]="clienteBaixaForm">
