--- a/src/app/pages/clientes/clientes.component.html
+++ b/src/app/pages/clientes/clientes.component.html
@@ -25,7 +25,7 @@
     </ng-container>
 
     <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef>Email</th>
+      <th mat-header-cell *matHeaderCellDef>Endereço</th>
       <td mat-cell *matCellDef="let cliente">{{ cliente.email }}</td>
     </ng-container>
 
@@ -35,7 +35,7 @@
     </ng-container>
 
     <ng-container matColumnDef="isrevendedor">
-      <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>&nbsp;</th>
       <td mat-cell *matCellDef="let cliente">
           <!-- {{ cliente.isrevendedor ? 'Sim' : 'Não' }} -->
         <mat-icon *ngIf="cliente.isrevendedor" color="accent">star</mat-icon>
