--- a/src/app/pages/clientes/cliente-form/cliente-form.component.html
+++ b/src/app/pages/clientes/cliente-form/cliente-form.component.html
@@ -12,7 +12,7 @@
     </mat-form-field>
 
     <mat-form-field class="full-width">
-      <mat-label>Email</mat-label>
+      <mat-label>Endereço</mat-label>
       <input matInput type="email" formControlName="email">
     </mat-form-field>
 
