--- a/src/app/pages/pedidos/pedido-form/pedido-form.component.css
+++ b/src/app/pages/pedidos/pedido-form/pedido-form.component.css
@@ -73,3 +73,8 @@ button {
     padding-top: 10px;
     border-top: 1px solid #ccc; /* 🔹 Linha sutil para separar */
   }
+
+  .erro-snackbar {
+  background-color: #d32f2f;
+  color: #fff;
+}
