--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -37,7 +37,7 @@
       <button mat-icon-button (click)="alternarMenu()">
         <mat-icon>{{ menuAberto ? 'chevron_left' : 'menu' }}</mat-icon>
       </button>
-      <span>DISTRIBUIDORA DE OVOS SÃO LUCAS LTDA</span>
+      <span>GREGO DISTRIBUIDORA DE OVOS LTDA</span>
       <!-- <span class="spacer"></span>
       <button mat-icon-button (click)="alternarTema()">
         <mat-icon>{{ temaEscuro ? 'dark_mode' : 'light_mode' }}</mat-icon>
