Estrutura inicial tema claro e escuro.

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -38,10 +38,10 @@
         <mat-icon>{{ menuAberto ? 'chevron_left' : 'menu' }}</mat-icon>
       </button>
       <span>GREGO DISTRIBUIDORA DE OVOS LTDA</span>
-      <!-- <span class="spacer"></span>
+      <span class="spacer"></span>
       <button mat-icon-button (click)="alternarTema()">
         <mat-icon>{{ temaEscuro ? 'dark_mode' : 'light_mode' }}</mat-icon>
-      </button> -->
+      </button>
     </mat-toolbar>    
     <div class="content">
       <router-outlet></router-outlet>
