--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,11 +3,11 @@
       <h2>Login</h2>
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <mat-form-field appearance="outline" class="full-width">
-          <mat-label>E-mail</mat-label>
-          <input matInput type="email" formControlName="email" />
-          <mat-error *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched">
+          <mat-label>Usuario</mat-label>
+          <input matInput type="text" formControlName="email" />
+          <!-- <mat-error *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched">
             Informe um e-mail válido.
-          </mat-error>
+          </mat-error> -->
         </mat-form-field>
   
         <mat-form-field appearance="outline" class="full-width">
