--- a/src/app/pages/pedidos/pedido-detalhe/pedido-detalhe.component.html
+++ b/src/app/pages/pedidos/pedido-detalhe/pedido-detalhe.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title class="no-print">Baixa de Pagamento #{{ data.id }}</h2>
+<h2 mat-dialog-title class="no-print">(Obsoleto)Baixa de Pagamento #{{ data.id }}</h2>
 <mat-dialog-content>
     <div class="print-container">
       <h3>Dados do Pedido: {{ data.id }}</h3>
