--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -20,12 +20,12 @@
       <a mat-list-item routerLink="meios-pagamento">
         <mat-icon>payment</mat-icon> Meios de Pagamento
       </a>
-      <a mat-list-item routerLink="fornecedores">
+      <!-- <a mat-list-item routerLink="fornecedores">
         <mat-icon>payment</mat-icon> Fornecedores
       </a>
       <a mat-list-item routerLink="fornecedores">
         <mat-icon>payment</mat-icon> Plano de Contas
-      </a>
+      </a> -->
       <a mat-list-item routerLink="/login">
         <button mat-button (click)="logout()">Sair</button>
       </a>
