--- a/src/app/pages/relatorios/relatorios.component.html
+++ b/src/app/pages/relatorios/relatorios.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <h2>Relatórios</h2>
     <mat-tab-group>
-        <mat-tab label="Caixa Diário">
+        <mat-tab label="Caixa (Do Dia)">
             <div class="p-4">
                 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 mt-4">
 
@@ -25,8 +25,28 @@
                 </table>
             </div>
         </mat-tab>
-        <mat-tab label="Vendas Em aberto (À Prazo)">
+        <mat-tab label="À Prazo (Do Dia)">
             <div class="p-4">
+                <table mat-table [dataSource]="dataSource2" class="mat-elevation-z8 mt-4">
+
+                    <ng-container matColumnDef="id">
+                    <th mat-header-cell *matHeaderCellDef>ID</th>
+                    <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="nome">
+                    <th mat-header-cell *matHeaderCellDef>Cliente</th>
+                    <td mat-cell *matCellDef="let element">{{ element.clienteNome }}</td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="total">
+                    <th mat-header-cell *matHeaderCellDef>Total</th>
+                    <td mat-cell *matCellDef="let element">{{ element.total | currency:'BRL':'symbol':'1.2-2':'pt-BR' }}</td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="['id', 'nome', 'total']"></tr>
+                    <tr mat-row *matRowDef="let row; columns: ['id', 'nome', 'total'];"></tr>
+                </table>
             </div>
         </mat-tab>
 
