--- a/src/app/pages/meios-pagamento/meio-pagamento-form/meio-pagamento-form.component.html
+++ b/src/app/pages/meios-pagamento/meio-pagamento-form/meio-pagamento-form.component.html
@@ -6,6 +6,7 @@
       <mat-label>Nome do Meio de Pagamento</mat-label>
       <input matInput formControlName="nome">
     </mat-form-field>
+    <mat-checkbox formControlName="isgeranfce" class="checkbox-align">Gera NFce?</mat-checkbox>
   </form>
 </mat-dialog-content>
 
