--- a/src/app/pages/meios-pagamento/meio-pagamento-form/meio-pagamento-form.component.css
+++ b/src/app/pages/meios-pagamento/meio-pagamento-form/meio-pagamento-form.component.css
@@ -1,5 +1,10 @@
 .full-width {
     width: 100%;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
   }
-  
+
+.checkbox-align {
+  margin-top: 1.5rem;
+  border-color: white !important;
+  background-color: transparent !important;
+}
