--- a/src/app/pages/meios-pagamento/meio-pagamento-form/meio-pagamento-form.component.css
+++ b/src/app/pages/meios-pagamento/meio-pagamento-form/meio-pagamento-form.component.css
@@ -1,7 +1,18 @@
 .full-width {
-    width: 100%;
-    /* margin-bottom: 10px; */
-  }
+  width: 100%;
+}
+
+.half-width {
+  width: 48%;
+  margin-right: 4%;
+}
+
+.form-row {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
 
 .checkbox-align {
   margin-top: 1.5rem;
