--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -20,10 +20,10 @@
       <a mat-list-item routerLink="meios-pagamento">
         <mat-icon>payment</mat-icon> Meios de Pagamento
       </a>
-      <!-- <a mat-list-item routerLink="fornecedores">
-        <mat-icon>payment</mat-icon> Fornecedores
+      <a mat-list-item routerLink="caixa">
+        <mat-icon>account_balance</mat-icon> Caixa
       </a>
-      <a mat-list-item routerLink="fornecedores">
+      <!-- <a mat-list-item routerLink="fornecedores">
         <mat-icon>payment</mat-icon> Plano de Contas
       </a> -->
       <a mat-list-item routerLink="/login">
