evolução excluir pedido

--- a/src/app/pages/pedidos/pedidos.component.html
+++ b/src/app/pages/pedidos/pedidos.component.html
@@ -51,8 +51,15 @@
     <ng-container matColumnDef="delete">
       <th mat-header-cell *matHeaderCellDef>Excluir</th>
       <td mat-cell *matCellDef="let pedido">
-        <button mat-icon-button color="accent">
+        <button mat-icon-button color="accent" 
+          *ngIf="podeExcluir(pedido)" 
+          (click)="excluirPedido(pedido)">
           <mat-icon>delete</mat-icon>
+        </button>
+        <button mat-icon-button color="accent" 
+          *ngIf="!podeExcluir(pedido)"
+          (click)="naopode()">
+          <mat-icon>block</mat-icon>
         </button>
       </td>
     </ng-container>
