--- a/src/app/pages/caixa/caixa.component.html
+++ b/src/app/pages/caixa/caixa.component.html
@@ -49,7 +49,10 @@
                 </table> -->
             </div>
         </mat-tab>
-
+        <mat-tab label="Transferências">
+            <div class="p-4">
+            </div>
+        </mat-tab>
         </mat-tab-group>
 
 </mat-card>
