--- a/src/app/pages/caixa/caixa.component.html
+++ b/src/app/pages/caixa/caixa.component.html
@@ -2,28 +2,19 @@
     <h2>Caixa</h2>
     <mat-tab-group>
         <mat-tab label="Abertura / Fechamento Caixa">
-            <div class="p-4">
-                <!-- <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 mt-4">
-
-                    <ng-container matColumnDef="id">
-                    <th mat-header-cell *matHeaderCellDef>ID</th>
-                    <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="nome">
-                    <th mat-header-cell *matHeaderCellDef>Caixa</th>
-                    <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="total">
-                    <th mat-header-cell *matHeaderCellDef>Total</th>
-                    <td mat-cell *matCellDef="let element">{{ element.total | currency:'BRL':'symbol':'1.2-2':'pt-BR' }}</td>
-                    </ng-container>
-
-                    <tr mat-header-row *matHeaderRowDef="['id', 'nome', 'total']"></tr>
-                    <tr mat-row *matRowDef="let row; columns: ['id', 'nome', 'total'];"></tr>
-                </table> -->
-            </div>
+            <form [formGroup]="AFCaixaForm" (ngSubmit)="salvarAFCaixa()">
+                <br/>
+                <mat-form-field class="preco-width">
+                <mat-label>Saldo</mat-label>
+                <input matInput formControlName="txtsaldo" readonly>
+                </mat-form-field>
+                &nbsp;
+                <button mat-raised-button color="accent" type="submit">
+                  {{ !statusCaixa ? 'Carregando...' : 
+                    (statusCaixa.isopened ? 'Fechar Caixa' : 'Abrir Caixa')
+                    }}
+                </button>
+            </form>
         </mat-tab>
         <mat-tab label="Sangrias (Do Dia)">
             <div class="p-4">
