--- a/src/app/pages/relatorios/relatorios.component.html
+++ b/src/app/pages/relatorios/relatorios.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <h2>Relatórios</h2>
     <mat-tab-group>
-        <mat-tab label="Caixa (Do Dia)">
+        <mat-tab label="Movimento Total (Do Dia)">
             <div class="p-4">
                 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 mt-4">
 
