plano de contas crud

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -23,9 +23,9 @@
       <a mat-list-item routerLink="caixa">
         <mat-icon>account_balance</mat-icon> Caixa
       </a>
-      <!-- <a mat-list-item routerLink="fornecedores">
-        <mat-icon>payment</mat-icon> Plano de Contas
-      </a> -->
+      <a mat-list-item routerLink="plano-conta">
+        <mat-icon>corporate_fare</mat-icon> Plano de Contas
+      </a>
       <a mat-list-item routerLink="/login">
         <button mat-button (click)="logout()">Sair</button>
       </a>
