--- a/src/app/pages/meios-pagamento/meio-pagamento-form/meio-pagamento-form.component.html
+++ b/src/app/pages/meios-pagamento/meio-pagamento-form/meio-pagamento-form.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>{{ data ? 'Editar Meio de Pagemnto' : 'Novo Meio de Pagemnto' }}</h2>
+<h2 mat-dialog-title>{{ data ? 'Editar Meio de Pagamento' : 'Novo Meio de Pagamento' }}</h2>
 <mat-dialog-content>
   <form [formGroup]="MeiosPagamentoForm">
     <div class="form-row">
