--- a/src/app/pages/caixa/caixa.component.css
+++ b/src/app/pages/caixa/caixa.component.css
@@ -17,3 +17,16 @@ mat-card {
     margin-right: 10px;
   }
   
+  .full-width {
+    width: 100%;
+    max-width: 400px;
+    padding: 10px;
+    margin: auto;
+    text-align: center;
+  }
+
+  .linha-separada {
+    margin-top: 20px;
+    padding-top: 10px;
+    border-top: 1px solid #ccc;
+  }
