--- a/src/app/pages/plano-conta/plano-conta.component.html
+++ b/src/app/pages/plano-conta/plano-conta.component.html
@@ -11,24 +11,24 @@
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-        <td mat-cell *matCellDef="let produto">{{ produto.id }}</td>
+        <td mat-cell *matCellDef="let planoConta">{{ planoConta.id }}</td>
       </ng-container>
   
       <ng-container matColumnDef="nome">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
-        <td mat-cell *matCellDef="let produto">{{ produto.nome }}</td>
+        <td mat-cell *matCellDef="let planoConta">{{ planoConta.nome }}</td>
       </ng-container>
 
       <ng-container matColumnDef="tipo">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo</th>
-        <td mat-cell *matCellDef="let produto">{{ produto.tipo ? 'Débito (saída)' : 'Crédito (entrada)' }}</td>
+        <td mat-cell *matCellDef="let planoConta">{{ planoConta.tipo ? 'Débito (saída)' : 'Crédito (entrada)' }}</td>
       </ng-container>
   
       <ng-container matColumnDef="acoes">
         <th mat-header-cell *matHeaderCellDef>Ações</th>
-        <td mat-cell *matCellDef="let produto">
-          <button mat-button color="accent" (click)="abrirFormulario(produto)">Editar</button>
-          <button mat-button color="warn" (click)="excluir(produto.id)">Excluir</button>
+        <td mat-cell *matCellDef="let planoConta">
+          <button mat-button color="accent" (click)="abrirFormulario(planoConta)">Editar</button>
+          <button mat-button color="warn" (click)="excluir(planoConta.id)">Excluir</button>
         </td>
       </ng-container>
   
