--- a/src/app/pages/caixa/caixa.component.html
+++ b/src/app/pages/caixa/caixa.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="pedido-card">
     <h2>Caixa</h2>
     <mat-tab-group>
         <mat-tab label="Abertura / Fechamento Caixa">
@@ -16,7 +16,8 @@
                 </button>
             </form>
         </mat-tab>
-        <mat-tab label="Sangria / Suprimento (Do Dia)">
+
+        <mat-tab label="Sangria / Suprimento">
             <div class="p-4">
                 <form [formGroup]="SSCaixaForm" (ngSubmit)="salvarMovimento()">
                     <br/>
@@ -37,10 +38,86 @@
                 </form>
             </div>
         </mat-tab>
-        <mat-tab label="Transferências">
+
+        <mat-tab label="Lançamentos">
             <div class="p-4">
+                <form [formGroup]="LancamentosForm" (ngSubmit)="salvarLancamento()">
+                    <br/>
+                    <mat-form-field class="full-width">
+                    <mat-label>Meio de Pagamento</mat-label>
+                    <mat-select formControlName="meioPagamento"> 
+                        <mat-option *ngFor="let meioPagamento of meioPagamento" [value]="meioPagamento.id">
+                            {{ meioPagamento.nome }}
+                        </mat-option>
+                    </mat-select>
+                    </mat-form-field>
+
+                    <mat-form-field class="full-width">
+                    <mat-label>Plano de Conta</mat-label>
+                    <mat-select formControlName="planoConta">
+                        <mat-option *ngFor="let planoConta of planoContas" [value]="planoConta.id" >
+                        {{ planoConta.nome }} - {{ planoConta.tipo ? 'Débito' : 'Crédito' }}
+                        </mat-option>
+                    </mat-select>
+                    </mat-form-field>
+                    
+                    <mat-form-field class="full-width">
+                        <mat-label>Valor </mat-label>
+                        <input matInput formControlName="txtvalor" type="number">
+                    </mat-form-field>
+
+                    <mat-form-field class="full-width">
+                        <mat-label>Observações</mat-label>
+                        <input matInput formControlName="obsL" />
+                    </mat-form-field>
+
+                    <button mat-raised-button color="accent" type="submit" [disabled]="LancamentosForm.invalid">
+                    Salvar
+                    </button>
+
+                </form>
             </div>
         </mat-tab>
-        </mat-tab-group>
 
+        <mat-tab label="Tranferências">
+            <div class="p-4">
+                <form [formGroup]="TransferenciasForm" (ngSubmit)="salvarTransferencias()">
+                    <br/>
+                    <mat-form-field class="full-width">
+                    <mat-label>DE --> Meio de Pagamento</mat-label>
+                    <mat-select formControlName="meioPagamentoDE"> 
+                        <mat-option *ngFor="let meioPagamentoDE of meioPagamentoDE" [value]="meioPagamentoDE.id">
+                            {{ meioPagamentoDE.nome }}
+                        </mat-option>
+                    </mat-select>
+                    </mat-form-field>
+                    
+                    <mat-form-field class="full-width">
+                        <mat-label>Valor </mat-label>
+                        <input matInput formControlName="txtvalorT" type="number">
+                    </mat-form-field>
+
+                    <mat-form-field class="full-width">
+                    <mat-label>PARA --> Meio de Pagamento</mat-label>
+                    <mat-select formControlName="meioPagamentoPARA"> 
+                        <mat-option *ngFor="let meioPagamentoPARA of meioPagamentoPARA" [value]="meioPagamentoPARA.id">
+                            {{ meioPagamentoPARA.nome }}
+                        </mat-option>
+                    </mat-select>
+                    </mat-form-field>
+
+                    <mat-form-field class="full-width">
+                        <mat-label>Observações</mat-label>
+                        <input matInput formControlName="obsT" />
+                    </mat-form-field>
+
+                    <button mat-raised-button color="accent" type="submit" [disabled]="TransferenciasForm.invalid">
+                    Salvar
+                    </button>
+
+                </form>
+            </div>
+        </mat-tab>
+
+    </mat-tab-group>
 </mat-card>
